--- a/app/src/main/res/layout/activity_cricketer.xml
+++ b/app/src/main/res/layout/activity_cricketer.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="5dp"
-        android:text="Sachin Tendulkar"
+        android:text="@string/sachin_tendulkar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="5dp"
-        android:text="Virat Kohli"
+        android:text="@string/virat_kohli"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sachin" />
@@ -47,7 +47,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Adam Gilchrist"
+        android:text="@string/adam_gilchrist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/virat" />
@@ -61,7 +61,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Jacques Kallis"
+        android:text="@string/jacques_kallis"
         android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Who is the best cricketer in the world ?"
+        android:text="@string/who_is_the_best_cricketer_in_the_world"
         android:textStyle="bold"
         android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
         android:id="@+id/next"
         android:layout_width="0dp"
         android:layout_height="44dp"
-        android:text="Next"
+        android:text="@string/next"
         android:background="@color/blue"
         android:textColor="@color/white"
         android:textStyle="bold"
