--- a/app/src/main/res/layout/activity_cricketer.xml
+++ b/app/src/main/res/layout/activity_cricketer.xml
@@ -88,7 +88,7 @@
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:text="@string/next"
-        android:background="@color/blue"
+        android:background="@color/colorPrimary"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
