--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:backgroundTint="@color/blue"
+            android:backgroundTint="@color/colorPrimary"
             android:focusable="true"
             android:gravity="center_vertical"
             android:hint="Enter Name"
@@ -55,7 +55,7 @@
 
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="@color/colorPrimary"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:text="Next"
