--- a/app/src/main/res/layout/adapter_history.xml
+++ b/app/src/main/res/layout/adapter_history.xml
@@ -2,6 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_margin="8dp"
+    android:id="@+id/layout"
+    android:visibility="gone"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/grid_row_border"
     android:layout_height="wrap_content">
@@ -16,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/margin_top"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="@dimen/padding_textView"
@@ -50,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/margin_top"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="@dimen/padding_textView"
@@ -66,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="3dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="@dimen/padding_textView"
@@ -84,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/margin_top"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="@dimen/padding_textView"
@@ -96,12 +99,13 @@
 
 
     <TextView
+        android:layout_marginBottom="6dp"
         android:id="@+id/answer_flag"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="3dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="@dimen/padding_textView"
@@ -117,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/margin_top"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="@dimen/padding_textView"
