--- a/app/src/main/res/layout/activity_colors.xml
+++ b/app/src/main/res/layout/activity_colors.xml
@@ -87,7 +87,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:background="@color/blue"
+        android:background="@color/colorPrimary"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:id="@+id/next"
