--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,18 +19,18 @@
         <!-- Hint color and label color in FALSE state -->
 
 
-        <item name="android:textColorHint">@color/blue</item>
+        <item name="android:textColorHint">@color/colorPrimary</item>
 
         <item name="android:textSize">15sp</item>
 
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
 
 
-        <item name="colorAccent">@color/blue</item>
+        <item name="colorAccent">@color/colorPrimary</item>
 
-        <item name="colorControlNormal">@color/blue</item>
+        <item name="colorControlNormal">@color/colorPrimary</item>
 
-        <item name="colorControlActivated">@color/blue</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
 
     </style>
 
